Bottom margin on the footer to prevent squashing

--- a/app/assets/stylesheets/nav/footer.scss
+++ b/app/assets/stylesheets/nav/footer.scss
@@ -1,7 +1,7 @@
 footer {  
   @include inset-box-shadow(0, 10px, 5px, -8px, $med-gray);
   color: lighten($dark-gray, 30);
-  margin-top: 100px;
+  margin: 100px 0 25px;
   padding-top: 15px;
   position: relative;
   text-align: center;  
